# computer_graphics_hw2

./: CMakeLists.txt  cube_smooth.sh  disp.sh  run.sh  simple_curve.sh  simple_hair.sh  subdiv_suzanne_curve.sh  subdiv_suzanne_hair.sh  suzanne_faceted.sh  xcode.sh
build_ubuntu/: CMakeCache.txt  Makefile  cmake_install.cmake
in/normdisp_pointlight/: normdisp_pointlight.mtl
in/subdiv_suzanne_pointlight/: subdiv_suzanne_pointlight.mtl
src/: printData.h  raytrace.cpp  tesselation.h  yocto_gltf.h  yocto_math.h  yocto_scn.cpp  yocto_scn.h
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
xcode/graphics17b_hw02.xcodeproj/: project.pbxproj
